first attempt at tags. Added tag tables to db and assigned some tags; added /tagged page; added panel that shows tags to folder view; added image info popup to image page

--- a/static/style_image.css
+++ b/static/style_image.css
@@ -197,3 +197,21 @@ span #time-current {
 .loading-fav {
   animation: rotateFav 2s linear infinite;
 }
+
+.popup {
+  position: absolute;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  display: none;
+}
+
+.popup-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#copyButton {
+  margin-left: 10px;
+}
