--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -39,6 +39,7 @@
                     <option value="{{ st[0] }}">{{ st[1] }}</option>
                     {% endfor %}
                 </select>
+                <button id="info-button">info</button>
             </div>
             <div class="row">
                 <button class="fav" id="is-fav" value="{{ image.is_fav }}"></button>
@@ -73,6 +74,20 @@
             <div class="row">
                 <button id="prev">Prev</button>
                 <button id="next">Next</button>
+            </div>
+
+            <div id="popup" class="popup">
+                <div class="popup-row">
+                    <span id="path">{{ image.path }}</span>
+                    <button id="copyButton">Copy</button>
+                </div>
+                <div class="popup-row">
+                    <ul id="tags">
+                        {% for tag in tags %}
+                            <li><a href="/tagged?tags={{ tag[0] }}">{{ tag[1] }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
 	</div>
@@ -342,6 +357,36 @@
 
                 magnification.style.backgroundPosition = `${x}px ${y}px`
             }
+
+
+
+
+            // popup
+
+            // Get references to the button and popup elements
+            const button = document.getElementById('info-button');
+            const popup = document.getElementById('popup');
+
+            // Show the popup when the button is clicked
+            button.addEventListener('click', () => {
+                popup.style.display = 'block';
+            });
+
+            // Hide the popup when clicking outside of it
+            document.addEventListener('click', (event) => {
+                if (!popup.contains(event.target) && event.target !== button) {
+                    popup.style.display = 'none';
+                }
+            });
+
+            // Copy the path to clipboard when the "Copy to Clipboard" button is clicked
+            const pathElement = document.getElementById('path');
+            const copyButton = document.getElementById('copyButton');
+
+            copyButton.addEventListener('click', () => {
+                const path = pathElement.innerText;
+                // Copy path to clipboard logic goes here...
+            });
         }
     </script>
 </body>
