fixed title of folder view

--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Favorites</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/styles_gallery.css">
     <script type="text/javascript" src="/static/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/mut_attr_observer.js"></script>
 </head>
 <body>
 <div class="header">
-<h1>{{ title }} </h1>
+<h1>{{ title }}</h1>
     <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path|default('') }}</p>
 </div>
 <div>{{ panel|default('') }}</div>
