--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -66,7 +66,7 @@
                 <div class="popup-row">
                     <ul id="tags">
                         {% for tag in tags %}
-                            <li><a href="/tagged?tags={{ tag[0] }}">{{ tag[1] }}</a></li>
+                            <li><a href="/tagged?tags={{ tag.tag }}">{{ tag.tag }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
