--- a/templates/tpl_tags_panel.html
+++ b/templates/tpl_tags_panel.html
@@ -5,31 +5,25 @@
 <script>
     function toggle_tag(tagId)
     {
-        const url = window.location.href
-        if (url.indexOf('?') === -1) { return }
-        let queryString = url.split('?')[1]
+        let full_url = window.location.href.replace(/#$/, "")
+        if (full_url.indexOf('?') === -1) { full_url = `${full_url}?page=1&tags=` }
+        const pageString = full_url.split('?')[0]
+        let queryString = full_url.split('?')[1]
         let params = new URLSearchParams(queryString)
-        let tagsList = decodeURIComponent(params.get('tags')).replace('#', '')
-        if (!tagsList) { return }
+        let tagsList = decodeURIComponent(params.get('tags'))
+        if (!tagsList) { tagsList = "" }
 
-        console.log(tagsList)
         let ids = tagsList.split(',')
 
         // Perform the action based on the provided action parameter
         let index = ids.indexOf(tagId)
         // not found, adding
-        if (index === -1)
-        {
-            ids.push(tagId)
-        }
-        else
-        {
-            ids.splice(index, 1)
-        }
+        if (index === -1) { ids.push(tagId) }
+        else { ids.splice(index, 1) }
 
-        console.log(`to url -> ${ids.join(',')}`)
-        params.set('tags', encodeURIComponent(ids.join(',')))
-        let newUrl = url.split('?')[0] + '?' + decodeURIComponent(params.toString())
+        const newTagsList = ids.join(',').replace(/^,/, "")
+        params.set('tags', encodeURIComponent(newTagsList))
+        let newUrl = pageString + '?' + decodeURIComponent(params.toString())
         window.history.replaceState({}, '', newUrl)
     }
 </script>
